fix shifting text due to ::after

--- a/styles.css
+++ b/styles.css
@@ -161,8 +161,18 @@ input:not(:focus):not(:placeholder-shown):invalid {
     border: 1px solid red;
 }
 
+input + span {
+    position: relative;
+}
+
+input + span::after {
+    position: absolute;
+    /* top: 6px; */
+    left: 5px;
+}
+
 input:not([type="password"]):valid + span::after {
-    content: "✓";
+    content: "\2714\0020";
     color: green;
 }
 
@@ -171,7 +181,12 @@ input:not([type="password"]):not(:focus):not(:placeholder-shown):invalid + span:
     color: red;
 }
 
-#password:not(:focus):not(:placeholder-shown):invalid + span::after {
+input[type="password"][name="password"]:valid + span::after {
+    content: "\2714\0020";
+    color: green;
+}
+
+input[type="password"][name="password"]:not(:focus):not(:placeholder-shown):invalid + span::after {
     content: "✖";
     color: red;
 }
@@ -209,13 +224,9 @@ label {
 
 .password-rules {
     position: absolute;
-    bottom: 80px;
-    right: 300px;
+    bottom: 70px;
+    right: 220px;
     display: none;
-}
-
-.password-rules > p {
-    /* border: 1px solid red; */
 }
 
 .password-rules > ul {
@@ -223,16 +234,15 @@ label {
     list-style: circle;
 }
 
-.password-rules > ul >li{
-    /* border: 1px solid red; */
-}
-
 .checked-rules {
+    position: relative;
     list-style: none;
 }
 
 .checked-rules::before {
+    position: absolute;
     content: "\2714\0020";
     color: green;
+    top: -2px;
     margin-left: -18px;
 }
